--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
   flutter_layout_grid: ^2.0.0
+  yaml: ^3.1.2
+  yaml_writer: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  riverpod_generator: ^2.4.3
-  riverpod_lint: ^2.3.13
+  flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
 
 flutter:
   uses-material-design: true
