--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_layout_grid: ^2.0.0
   yaml: ^3.1.2
   yaml_writer: ^2.0.1
+  file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
