--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   riverpod_generator: ^2.6.1
   riverpod_lint: ^2.6.1
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
